Add standard background-clip property for compatibility

--- a/templates/index.html
+++ b/templates/index.html
@@ -95,6 +95,7 @@
       text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
       background: linear-gradient(to right, #fff, #a8c0ff);
       -webkit-background-clip: text;
+      background-clip: text;
       -webkit-text-fill-color: transparent;
       position: relative;
     }
